src/objects/Account_Service__c.object
<CustomObject>
    <description>Individual service an airline has subscribed to</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Related Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Services</relationshipLabel>
        <relationshipName>Account_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represents if the current service is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Junction_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field combines the account Id to the Service Id to make a unique external id for each junction. For example 001accountId_xxxserviceId</description>
        <externalId>true</externalId>
        <label>Junction Name</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>Related Service</description>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Account Services</relationshipLabel>
        <relationshipName>Account_Services</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account Service</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Account Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>